Adds kwargs example

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -313,6 +313,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_optional(x, add=0, sub=0):\n",
+    "    return x + add - sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_optional(42, sub=10)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
