Prevents error when running this (pseudo) code

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1186,7 +1186,7 @@
    "source": [
     "def read_user_data(user_id):\n",
     "    # reads user data from file or database\n",
-    "    pass\n",
+    "    return [42, 99]\n",
     "\n",
     "user_ids = [1, 2, 3]\n",
     "\n",
