Adds examples of OO programming in Pandas DataFrames

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -373,6 +373,328 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Composition of a Pandas DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df = pd.DataFrame({\n",
+    "    'amount': [42., 100., 999.],\n",
+    "    'from': ['bob', 'alice', 'bob'],\n",
+    "    'to': ['alice', 'bob', 'alice']\n",
+    "})\n",
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df['amount']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df['amount'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df['amount'][0], type(transaction_df['amount'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(transaction_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Index-based (or Label-based) Selection and Assignment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df = pd.DataFrame({\n",
+    "    'amount': [42., 100., 999.],\n",
+    "    'from': ['bob', 'alice', 'bob'],\n",
+    "    'to': ['alice', 'bob', 'alice']\n",
+    "})\n",
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[[0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df = pd.DataFrame({\n",
+    "    'amount': [42., 100., 999.],\n",
+    "    'from': ['bob', 'alice', 'bob'],\n",
+    "    'to': ['alice', 'bob', 'alice']\n",
+    "}, index=[2, 4, 6])\n",
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_messages = pd.Series(['foo', 'bar', 'baz'])\n",
+    "transaction_messages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.assign(message=transaction_messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_messages = pd.Series(['foo', 'bar', 'baz'], index=[2, 4, 6])\n",
+    "transaction_df.assign(message=transaction_messages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df = pd.DataFrame({\n",
+    "    'amount': [42., 100., 999.],\n",
+    "    'from': ['bob', 'alice', 'bob'],\n",
+    "    'to': ['alice', 'bob', 'alice'],\n",
+    "    'tx_id': [101, 201, 301]\n",
+    "})\n",
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.set_index('tx_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_size = 100_000\n",
+    "\n",
+    "foo_df = pd.DataFrame({\n",
+    "    'a': np.arange(df_size),\n",
+    "    'b': np.random.permutation(df_size)\n",
+    "})\n",
+    "foo_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why indexing?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "for n in np.random.choice(df_size, size=10):\n",
+    "    foo_df.loc[lambda df: df['b'] == n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit foo_df.loc[lambda df: df['b'] == 42]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx_foo_df = foo_df.set_index('b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit big_foo_df = foo_df.set_index('b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "for n in np.random.choice(df_size, size=10):\n",
+    "    idx_big_foo_df.loc[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit idx_foo_df.loc[42]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Inheritance"
    ]
   },
@@ -637,7 +959,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "transaction_df.loc[transaction_df['to'] == 'alice']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df.loc[transaction_df['to'] == 'alice'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df['to'] == 'alice'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[[0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    transaction_df\n",
+    "    .loc[lambda df: df['to'] == 'alice']\n",
+    "    .assign(amount=lambda df: df['amount'] * 2)\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
