Adds examples of iterating (and Pandas groupby())

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -685,13 +685,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -844,7 +837,290 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reflection: sklearn Estimators"
+    "sklearn estimators?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class IntRange:\n",
+    "    upper_bound: int\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.i = 0\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.i >= self.upper_bound:\n",
+    "            raise StopIteration\n",
+    "            \n",
+    "        current_value = self.i\n",
+    "        self.i += 1\n",
+    "        return current_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = IntRange(3)\n",
+    "r_iter = r.__iter__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_iter.__next__()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l_iter = iter([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_iter = iter(IntRange(3))\n",
+    "while True:\n",
+    "    try:\n",
+    "        print(next(r_iter))\n",
+    "    except StopIteration:\n",
+    "        print('Finished iterating!')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in IntRange(3):\n",
+    "    print(i * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[i ** 2 for i in IntRange(3)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ref to `range()`!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Square(Point2D(0, 0), 2).__class__.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'a': [1, 2], 'b': [3]}\n",
+    "d_iter = iter(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class ShapeGrouper:\n",
+    "    shapes: List[Shape2D]\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.shape_type_iter = iter(set([shape.__class__.__name__ for shape in self.shapes]))\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        shape_type = next(self.shape_type_iter)\n",
+    "        return shape_type, [shape for shape in self.shapes if shape.__class__.__name__ == shape_type]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bonus: a more efficient (and readable?) version using `collections.defaultdict()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "@dataclass\n",
+    "class ShapeGrouper:\n",
+    "    shapes: List[Shape2D]\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.shape_type_dict = defaultdict(list)\n",
+    "        for shape in self.shapes:\n",
+    "            self.shape_type_dict[shape.__class__.__name__].append(shape)\n",
+    "        self.shape_type_iter = iter(self.shape_type_dict.items())\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        return next(self.shape_type_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouper = ShapeGrouper([\n",
+    "    Square(Point2D(1, 1), 1),\n",
+    "    Circle(Point2D(3, 4), 1),\n",
+    "    Square(Point2D(0, 0), 2)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for shape_type, shape_list in grouper:\n",
+    "    print(f'{shape_type}: {shape_list}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class ShapeGrouper:\n",
+    "    shapes: List[Shape2D]\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        self.shape_type_iter = iter(set([shape.__class__.__name__ for shape in self.shapes]))\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        shape_type = next(self.shape_type_iter)\n",
+    "        return shape_type, [shape for shape in self.shapes if shape.__class__.__name__ == shape_type]\n",
+    "    \n",
+    "    def total_size(self):\n",
+    "        return [\n",
+    "            (shape_type, sum([shape.circumference() for shape in shapes]))\n",
+    "            for shape_type, shapes in self\n",
+    "        ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouper = ShapeGrouper([\n",
+    "    Square(Point2D(1, 1), 1),\n",
+    "    Circle(Point2D(3, 4), 1),\n",
+    "    Square(Point2D(0, 0), 2)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouper.total_size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(transaction_df.groupby('to'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for receiver, receiver_transactions in transaction_df.groupby('to'):\n",
+    "    print(f'{receiver} got a total amount of {receiver_transactions[\"amount\"].sum()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.groupby('to').sum()"
    ]
   },
   {
