Adds exercise for creating logging decorator

--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -403,11 +403,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Don't Repeat Yourself](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import logging\n",
+    "import time\n",
+    "from functools import wraps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.basicConfig(level=logging.DEBUG)  # You may need to restart the notebook to make this work\n",
+    "logger = logging.getLogger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def df_info(df):\n",
+    "    if df is not None:\n",
+    "        column_info = ','.join([f'{col} ({df[col].isnull().sum()} missing)' for col in df])\n",
+    "        return f'rows: {len(df)}, columns: {column_info}'\n",
+    "    else:\n",
+    "        return '<None>'\n",
+    "\n",
+    "def pandas_pipe_logging(func):\n",
+    "    @wraps(func)\n",
+    "    def logging_wrapper(*args, **kwargs):\n",
+    "        in_df = args[0]\n",
+    "        logger.debug(f'Calling pipeline function {func.__name__} with input {df_info(in_df)}')\n",
+    "        start = time.time()\n",
+    "        out = func(*args, **kwargs)\n",
+    "        stop = time.time()\n",
+    "        logger.debug(f'Returning dataframe with {df_info(out)}')\n",
+    "        logger.debug(f'Took {stop - start:.4f}s')\n",
+    "        return out\n",
+    "\n",
+    "    return logging_wrapper"
+   ]
   }
  ],
  "metadata": {
