--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "a = 10\n",
-    "a += 1  # shorthand notation for n = n + 1\n",
+    "a += 1  # shorthand notation for a = a + 1\n",
     "a"
    ]
   },
