Adds some more examples of common iterables and builtin reducers

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -602,6 +602,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "s = set(['a', 'b', 'c', 'b'])\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.add('d')\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s[1]"
    ]
   },
@@ -831,6 +851,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "w = 'foobar'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'f' in w, 'oo' in w, 'x' in w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s, len(s)"
    ]
   },
@@ -850,6 +888,15 @@
    "outputs": [],
    "source": [
     "sum([1, 2, 'a'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all([True, False, True]), any([False, True, False])"
    ]
   },
   {
