Adds exercise prompts and hides solutions

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1326,13 +1326,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function `largest_number_divisible_by_n()` that accepts as arguments a list of integers `numbers` and an integer `n`. It should return the largest number in `numbers` that is divisible by `n`. Use the assertions below to test your implementation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def largest_number_divisible_by_n(numbers, n):\n",
-    "    return max([elt for elt in numbers if elt % n == 0])"
+    "# %load solutions/largest_number_divisible_by_n.py"
    ]
   },
   {
@@ -1346,13 +1359,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function `prefix_names()` that accepts as arguments an Iterable of users `users` such as `user_tuples` above, and optional keyword arguments `FIRST_LETTER_OF_NAME=PREFIX`. It should return a list of the names in `users` with every name that matches one of the keyword arguments being prefixed with the prefix for that keyword argument."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prefix_names(users, **kwargs):\n",
-    "    return [f'{kwargs.get(name[0], \"\")}{name}' for _, name, _ in users]"
+    "# %load solutions/prefix_names.py"
    ]
   },
   {
@@ -1365,14 +1384,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a function `variance()` that accepts as argument an Iterable of numbers `numbers` and returns the (biased) variance of that sample, i.e., $\\frac{1}{n}\\sum_{i=1}^{n}(x_i - \\mu)^2$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def variance(numbers):\n",
-    "    mu = sum(numbers) / len(numbers)\n",
-    "    return sum([(n - mu) ** 2 for n in numbers]) / len(numbers)"
+    "# %load solutions/variance.py"
    ]
   },
   {
@@ -1382,6 +1406,13 @@
    "outputs": [],
    "source": [
     "assert variance([1, 2, 3, 10]) == 12.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Bonus_: Make sure that your implementation of `variance()` can handle zero-length inputs or an optional keyword argument to indicate that the unbiased variance should be returned (i.e. the sum of squared differences from the mean is divided by $n - 1$). What would be reasonable return values for these edge cases?"
    ]
   }
  ],
