Adds prompts for OO programming exercises, hides solutions

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -963,16 +963,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = {'a': [1, 2], 'b': [3]}\n",
-    "d_iter = iter(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "@dataclass\n",
     "class ShapeGrouper:\n",
     "    shapes: List[Shape2D]\n",
@@ -990,7 +980,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bonus: a more efficient (and readable?) version using `collections.defaultdict()`"
+    "__Bonus Exercise__: What happens if our list of shapes is long, having many unique shape types? Can we make our implementation more efficient by using a dictionary for quickly looking up all shapes of a given type? \n",
+    "\n",
+    "_Hint_: [`collections.defaultdict()`](https://docs.python.org/3/library/collections.html#collections.defaultdict) from the standard library may be particularly useful in this case."
    ]
   },
   {
@@ -999,21 +991,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "\n",
-    "@dataclass\n",
-    "class ShapeGrouper:\n",
-    "    shapes: List[Shape2D]\n",
-    "    \n",
-    "    def __iter__(self):\n",
-    "        self.shape_type_dict = defaultdict(list)\n",
-    "        for shape in self.shapes:\n",
-    "            self.shape_type_dict[shape.__class__.__name__].append(shape)\n",
-    "        self.shape_type_iter = iter(self.shape_type_dict.items())\n",
-    "        return self\n",
-    "    \n",
-    "    def __next__(self):\n",
-    "        return next(self.shape_type_iter)"
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/shape_grouper_efficient.py"
    ]
   },
   {
@@ -1131,68 +1118,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise__: Create a class `Vector` that implements the addition and multiplication behavior as given at the top of this module. Use the assertions below to verify the correctness of your solution.\n",
+    "\n",
+    "_Hints_: \n",
+    "\n",
+    "1. There are [some magic methods](https://docs.python.org/3/reference/datamodel.html#emulating-numeric-types) to provide an implementation of numeric operators on custom classes.\n",
+    "2. For the addition of vectors, [`zip()`](https://docs.python.org/3/library/functions.html#zip) can be a useful built-in function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass\n",
-    "class Vector:\n",
-    "    values: List[float]\n",
-    "    \n",
-    "    def __mul__(self, scalar: float):\n",
-    "        return Vector([v * scalar for v in self.values])\n",
-    "    \n",
-    "    def __add__(self, other: 'Vector'):\n",
-    "        return Vector([v1 + v2 for v1, v2 in zip(self.values, other.values)])"
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/vector_basic.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1 = Vector([1., 2.])\n",
+    "v2 = Vector([2., 4.])\n",
+    "v3 = Vector([3.5, 4.5])\n",
+    "v4 = Vector([1, 2, 3])\n",
+    "\n",
+    "assert v1 + v1 == v2\n",
+    "assert v1 * 2 == v2\n",
+    "assert v1 * 2 + v3 == Vector([5.5, 8.5])\n",
+    "assert v1 + v3 * 2 == Vector([8, 11])\n",
+    "assert v4 + v4 == Vector([2, 4, 6])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ref zip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v1 = Vector([1, 2])\n",
-    "v2 = Vector([3, 4])\n",
-    "v1 * 2 + v2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class Vector:\n",
-    "    values: List[float]\n",
-    "    \n",
-    "    def __getitem__(self, index: int):\n",
-    "        return self.values[index]\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.values)\n",
-    "    \n",
-    "    def __mul__(self, scalar: float):\n",
-    "        return Vector([v * scalar for v in self.values])\n",
-    "    \n",
-    "    def __add__(self, other: 'Vector'):\n",
-    "        return Vector([self[i] + other[i] for i in range(len(self))])"
+    "_Reflection_: Why is it convenient that our addition and multiplication methods return (new) `Vector` objects?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ref __getitem__, __len__"
+    "__Bonus Exercise__: Add methods to the `Vector` class such that it (1) also implements a lookup by dimension just as we index a list using `[]`, and (2) it can return its number of dimensions using the builtin function `len()`.\n",
+    "\n",
+    "_Hint_: There are [some magic methods](https://docs.python.org/3/reference/datamodel.html#emulating-container-types) for implementing container-like behavior for custom classes."
    ]
   },
   {
@@ -1201,8 +1187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v3 = Vector([42, 99])\n",
-    "v3[0]"
+    "# Your solution:"
    ]
   },
   {
@@ -1211,7 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(v3)"
+    "# %load solutions/vector_as_container.py"
    ]
   },
   {
@@ -1220,7 +1205,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "v3 + Vector([1, 1])"
+    "v5 = Vector([42, 99])\n",
+    "assert v5[0] == 42\n",
+    "assert len(v5) == 2\n",
+    "assert (v5 + Vector([1, 1]) * 2)[1] == 101"
    ]
   },
   {
