Adds placeholder cells for exercise solutions

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1345,6 +1345,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %load solutions/largest_number_divisible_by_n.py"
    ]
   },
@@ -1371,6 +1380,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %load solutions/prefix_names.py"
    ]
   },
@@ -1388,6 +1406,15 @@
    "metadata": {},
    "source": [
     "Create a function `variance()` that accepts as argument an Iterable of numbers `numbers` and returns the (biased) variance of that sample, i.e., $\\frac{1}{n}\\sum_{i=1}^{n}(x_i - \\mu)^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
    ]
   },
   {
