Adds reflection on passing functions as arguments in pandas

--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -121,10 +121,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df = pd.DataFrame({\n",
+    "    'amount': [42., 100., 999.],\n",
+    "    'from': ['bob', 'alice', 'bob'],\n",
+    "    'to': ['alice', 'bob', 'alice']\n",
+    "})\n",
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_large_transactions(transaction_df):\n",
+    "    return transaction_df['amount'] > 100  # Where does transaction_df refer to?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.loc[select_large_transactions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_commission(transaction_df):\n",
+    "    return transaction_df['amount'] * 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.assign(commission=get_commission)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reflection on pandas .loc, .pipe"
+    "We can also provide arguments using [`functools.partial()`](https://docs.python.org/3/library/functools.html#functools.partial) from the standard library:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_commission(transaction_df, commission_percent=5):\n",
+    "    return transaction_df['amount'] * (commission_percent / 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.assign(commission=partial(get_commission, commission_percent=10))"
    ]
   },
   {
