Adds prompt for exercises, hides solutions for functional programming module

--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -467,44 +467,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise__: Add a method `pipe()` to our `Vector` class, which accepts as argument a function that transforms its input vector argument to another vector. As an example of such transformation functions, consider `rotate_right()` and `rotate_left()` given below. Test your implementation with the assertions below."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass\n",
-    "class Vector:\n",
-    "    values: List[float]\n",
-    "    \n",
-    "    def __getitem__(self, index: int):\n",
-    "        return self.values[index]\n",
-    "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.values)\n",
-    "    \n",
-    "    def __mul__(self, scalar: float):\n",
-    "        return Vector([v * scalar for v in self.values])\n",
-    "    \n",
-    "    def __add__(self, other: 'Vector'):\n",
-    "        return Vector([self[i] + other[i] for i in range(len(self))])\n",
-    "    \n",
-    "    def pipe(self, fn: Callable[['Vector'], 'Vector'], *args, **kwargs) -> 'Vector':\n",
-    "        return fn(self, *args, **kwargs)\n",
-    "\n",
     "def rotate_right(v: Vector) -> Vector:\n",
     "    return Vector([v[1], -v[0]])\n",
     "\n",
     "def rotate_left(v: Vector) -> Vector:\n",
-    "    return Vector([-v[1], v[0]])\n",
-    "\n",
-    "def rotate(v: Vector, direction=None) -> Vector:\n",
-    "    if direction in ['right', 'clockwise']:\n",
-    "        return Vector([v[1], -v[0]])\n",
-    "    elif direction in ['left', 'counterclockwise']:\n",
-    "        return Vector([-v[1], v[0]])\n",
-    "    else:\n",
-    "        print(f'Invalid rotation argument')\n",
-    "        return v"
+    "    return Vector([-v[1], v[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/vector_pipe.py"
    ]
   },
   {
@@ -515,6 +512,31 @@
    "source": [
     "assert Vector([1, 1]).pipe(rotate_right) == Vector([1, -1])\n",
     "assert Vector([1, 1]).pipe(rotate_left).pipe(rotate_left) == Vector([-1, -1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Bonus Exercise__: Make sure that our `pipe()` method can accept additional arguments: create a generic `rotate()` function that accepts an optional `direction` keyword argument with possible values `'right'`, `'clockwise'`, `'left'`, `'counterclockwise'`. If an invalid or no `direction` keyword argument is provided, `rotate()` should return the original vector. See the assertions below for the expected behavior of the solution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/vector_pipe_vararg.py"
    ]
   },
   {
