Adds examples of pandas pipe in relation to functional programming

--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -548,17 +548,63 @@
     "# bonus, have one generic rotation function\n",
     "assert Vector([1, 1]).pipe(rotate) == Vector([1, 1])\n",
     "assert Vector([1, 1]).pipe(rotate, direction='right').pipe(rotate, direction='counterclockwise') == Vector([1, 1])\n",
-    "assert Vector([1, 1]).pipe(rotate, direction='clockwise').pipe(rotate, direction='left') == Vector([1, 1])\n",
-    "\n",
+    "assert Vector([1, 1]).pipe(rotate, direction='clockwise').pipe(rotate, direction='left') == Vector([1, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# bonus, deal with any Vector manipulation function\n",
     "assert Vector([1, 1]).pipe(lambda v: Vector([v[0] * 42, v[1] * 99])) == Vector([42, 99])"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Reflection: pandas `pipe()`"
+    "transaction_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_amount_greater_than(tx_df, amount=100):\n",
+    "    return tx_df.loc[lambda df: df['amount'] > amount]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.pipe(select_amount_greater_than)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.pipe(select_amount_greater_than, amount=99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transaction_df.pipe(lambda df: df.loc[df['to'].isin(['bob', 'carol'])])"
    ]
   }
  ],
