--- a/00_introduction.ipynb
+++ b/00_introduction.ipynb
@@ -89,6 +89,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Grouping and Aggregating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -116,6 +123,13 @@
     "- What is the result of calling `groupby()` on the DataFrame? What is being returned?\n",
     "- How is it possible that we can use that result in a `for ... in` loop?\n",
     "- How is the `sum()` aggregation created?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipelines"
    ]
   },
   {
