--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -87,6 +87,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "activity_df['type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activity_df['type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "activity_df['type'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(activity_df)"
    ]
   },
